# insurance-pin

./: README.md  pyproject.toml
notebooks/: pin_demo.py
src/insurance_pin/: __init__.py  diagnostics.py  losses.py  model.py  networks.py  shapley.py
tests/: test_diagnostics.py  test_losses.py  test_model.py  test_networks.py  test_shapley.py
